kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mnist-classifier-app-service
spec:
    type: ClusterIP
    ports:
        - port: 5000
    selector:
        app: mnist-classifier-app
