kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mnist-classifier-app-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
    rules:
        - http:
            paths:
                - backend:
                    service:
                        name: mnist-classifier-app-service
                        port:
                            number: 5000
                  path: /
                  pathType: Prefix
